# atlas-external-example

./: .gitignore  CMakeLists.txt  README.md
cmake/: atlas-external-example-config.cmake.in
include/hls/: foo.h
src/: foo.cxx
